--- a/index.html
+++ b/index.html
@@ -7,14 +7,32 @@
   <style>
     html, body { margin:0; padding:0; width:100%; height:100%; font-family:sans-serif; }
     #menu, #display { display:none; height:100%; }
-    #menu { padding:20px; }
-    #svgContainer { width:100%; height:100%; }
+    #menu { padding:20px; box-sizing: border-box; }
+    textarea {
+      width: 100%;
+      height: 33vh;
+      font-family: monospace;
+      font-size: 14px;
+      box-sizing: border-box;
+    }
+    #svgList button {
+      display: block;
+      margin: 5px 0;
+    }
   </style>
 </head>
 <body>
   <div id="menu">
     <h1>SVG Loader Menu</h1>
+
+    <!-- Multiline Text Input -->
+    <textarea id="svgInput" placeholder="Paste SVG text here..."></textarea><br>
+    <button id="addSvgBtn">Add to storage</button><br><br>
+
+    <!-- File Input Loader -->
     <input type="file" id="fileInput" accept=".svg"><br><br>
+
+    <!-- SVG List -->
     <ul id="svgList"></ul>
   </div>
 
@@ -28,6 +46,8 @@
     const svgList = document.getElementById("svgList");
     const svgContainer = document.getElementById("svgContainer");
     const fileInput = document.getElementById("fileInput");
+    const svgInput = document.getElementById("svgInput");
+    const addSvgBtn = document.getElementById("addSvgBtn");
 
     let volumeUpPressed = false;
     let volumeDownPressed = false;
@@ -55,6 +75,20 @@
       display.style.display = "block";
     }
 
+    // Add SVG from textarea
+    addSvgBtn.addEventListener("click", () => {
+      const svgText = svgInput.value.trim();
+      if (svgText) {
+        const name = prompt("Enter name for SVG:");
+        if (name) {
+          localStorage.setItem("svg_" + name, svgText);
+          svgInput.value = "";
+          loadMenu();
+        }
+      }
+    });
+
+    // File input loader
     fileInput.addEventListener("change", e => {
       const file = e.target.files[0];
       const reader = new FileReader();
