--- a/index.html
+++ b/index.html
@@ -1,104 +1,155 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Counter</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        width: 100%;
-        overflow: hidden;
-      }
-      .button {
-        width: 33.33%;
-        height: 100%;
-        float: left;
-        background: #4CAF50;
-        font-size: 48px;
-        color: #fff;
-        text-align: center;
-        line-height: 720px;
-        user-select: none;
-      }
-      .score {
-        width: 33.33%;
-        height: 100%;
-        float: left;
-        background: #eee;
-        font-size: 36px;
-        color: #333;
-        text-align: center;
-        line-height: normal;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-      }
-      .score div {
-        margin: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="button" id="left">Left</div>
-    <div class="score">
-      <div id="run">Run: 0</div>
-      <div id="distance">Distance: 0</div>
-      <div id="total">Total: 0</div>
-    </div>
-    <div class="button" id="right">Right</div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>SVG PWA Menu</title>
+  <style>
+    html, body { margin:0; padding:0; width:100%; height:100%; font-family:sans-serif; }
+    #menu, #display { display:none; height:100%; }
+    #menu { padding:20px; box-sizing: border-box; }
+    textarea {
+      width: 100%;
+      height: 33vh;
+      font-family: monospace;
+      font-size: 14px;
+      box-sizing: border-box;
+    }
+    #svgList button {
+      display: block;
+      margin: 5px 0;
+    }
+  </style>
+</head>
+<body>
+  <div id="menu">
+    <h1>SVG Loader Menu</h1>
 
-    <script>
-      let totalClicks = 0;
-      let distance = 0;
-      let run = 0;
-      let lastPressed = null;
+    <!-- Multiline Text Input -->
+    <textarea id="svgInput" placeholder="Paste SVG text here..."></textarea><br>
+    <button id="addSvgBtn">Add to storage</button><br><br>
 
-      function updateCounters() {
-        document.getElementById("run").innerText = "Run: " + run;
-        document.getElementById("distance").innerText = "Distance: " + distance;
-        document.getElementById("total").innerText = "Total: " + totalClicks;
-      }
+    <!-- File Input Loader -->
+    <input type="file" id="fileInput" accept=".svg"><br><br>
 
-      function registerClick(side) {
-        totalClicks++;
+    <!-- SVG List -->
+    <ul id="svgList"></ul>
+  </div>
 
-        if (lastPressed && lastPressed !== side) {
-          run++;
-          distance++;
-        } else {
-          run = 1; // reset run if same side pressed twice or first click
-          if (!lastPressed) distance++; // count first click as distance if starting
+  <div id="display">
+    <div id="svgContainer"></div>
+  </div>
+
+  <script>
+    const menu = document.getElementById("menu");
+    const display = document.getElementById("display");
+    const svgList = document.getElementById("svgList");
+    const svgContainer = document.getElementById("svgContainer");
+    const fileInput = document.getElementById("fileInput");
+    const svgInput = document.getElementById("svgInput");
+    const addSvgBtn = document.getElementById("addSvgBtn");
+
+    let volumeUpPressed = false;
+    let volumeDownPressed = false;
+    let holdStart = null;
+
+    function loadMenu() {
+      svgList.innerHTML = "";
+      for (let key in localStorage) {
+        if (localStorage.hasOwnProperty(key) && key.startsWith("svg_")) {
+          const li = document.createElement("li");
+          const btn = document.createElement("button");
+          btn.textContent = key.replace("svg_", "");
+          btn.onclick = () => displaySVG(key);
+          li.appendChild(btn);
+          svgList.appendChild(li);
         }
-
-        lastPressed = side;
-        updateCounters();
       }
+      menu.style.display = "block";
+      display.style.display = "none";
+    }
 
-      
-function setupButtonEvents(id, side) {
-  const el = document.getElementById(id);
-  el.addEventListener("touchstart", (e) => {
-    e.preventDefault();
-    registerClick(side);
-  }, { passive: false });
-  el.addEventListener("mousedown", () => registerClick(side));
+    function displaySVG(key) {
+      svgContainer.innerHTML = localStorage.getItem(key);
+      menu.style.display = "none";
+      display.style.display = "block";
+    }
+
+    // Add SVG from textarea
+    addSvgBtn.addEventListener("click", () => {
+      const svgText = svgInput.value.trim();
+      if (svgText) {
+        const name = prompt("Enter name for SVG:");
+        if (name) {
+          localStorage.setItem("svg_" + name, svgText);
+          svgInput.value = "";
+          loadMenu();
+        }
+      }
+    });
+
+    // File input loader
+    fileInput.addEventListener("change", e => {
+      const file = e.target.files[0];
+      const reader = new FileReader();
+      reader.onload = function(evt) {
+        const name = prompt("Enter name for SVG:");
+        if (name) {
+          localStorage.setItem("svg_" + name, evt.target.result);
+          loadMenu();
+        }
+      };
+      reader.readAsText(file);
+    });
+
+let shakeCount = 0;
+let lastShakeTime = 0;
+let shakeTimeout;
+
+function handleMotion(event) {
+  const acc = event.acceleration;
+
+  if (acc && (Math.abs(acc.x) > 15 || Math.abs(acc.y) > 15 || Math.abs(acc.z) > 15)) {
+    const now = Date.now();
+
+    // Reset count if more than 2 seconds since last shake
+    if (now - lastShakeTime > 2000) {
+      shakeCount = 0;
+    }
+
+    shakeCount++;
+    lastShakeTime = now;
+
+    console.log(`Shake detected! Count: ${shakeCount}`);
+
+    if (shakeCount >= 3) {
+      exitToMenu();
+      shakeCount = 0;
+    }
+
+    // Clear shake count after 2 seconds
+    clearTimeout(shakeTimeout);
+    shakeTimeout = setTimeout(() => { shakeCount = 0; }, 2000);
+  }
 }
 
-setupButtonEvents("left", "left");
-setupButtonEvents("right", "right");
-      // Fullscreen request on user interaction
-      document.body.addEventListener("click", () => {
-        if (!document.fullscreenElement) {
-          document.documentElement.requestFullscreen().catch(err => {
-            console.log("Fullscreen error:", err);
-          });
-        }
-      });
+function exitToMenu() {
+  loadMenu();
+}
 
-      updateCounters();
-    </script>
-  </body>
+if (window.DeviceMotionEvent) {
+  window.addEventListener('devicemotion', handleMotion);
+} else {
+  console.log("DeviceMotion not supported on this device/browser.");
+}
+
+    // Initial load
+    loadMenu();
+
+    // Service Worker registration for PWA
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('sw.js');
+    }
+  </script>
+</body>
 </html>
